--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>CALUCULATA</h1>
+    <h1>CALUCULATAR</h1>
     
     <input type="text" id="left" placeholder="Enter left number">
     <select id="operator">
