--- a/cell03/ex04/ex02bis/calc.html
+++ b/cell03/ex04/ex02bis/calc.html
@@ -57,6 +57,11 @@
                 
                 alert(result);
                 console.log(result);
+
+                $("#left").val("")
+                $("#right").val("")
+
+
             }
 
             
@@ -66,6 +71,8 @@
             setInterval(() => {
                 alert("Please, use me...");
             }, 30000);
+
+
         });
     </script>
 
