--- a/rush/csangsir.html
+++ b/rush/csangsir.html
@@ -16,19 +16,19 @@
             padding-top: 56px; 
             background-color: black;
             font-size: xx-large;
-            color: #00ffc8;
+            color: #0c00b8;
             
         }
         h2{
             padding-bottom: 60px 0;
             font-size: 50px;
-            color: #ffffff;
+            color: #0084ff;
         }
         h3 {
             font-size: 45px;
             margin-bottom: 40px;
             margin-top: 20px;
-            color: #419b87;
+            color: #00a2ff;
         }
         h4 {
             font-size: 35px;
@@ -98,8 +98,8 @@
     <div class="container">
         <div id="about me" class="text-left" style="margin-top: 60px;">
             <h2 style="color: #ffffff;">About me</h2>
-            <h5>Name : Pachara Pakittawattanasiri</h5>
-            <img src="pool.jpg" alt="Profile image" class="img-fluid rounded-circle">
+            <h5>Name : Chanachai Sangsiri</h5>
+            <img src="earth.jpg" alt="Profile image" class="img-fluid rounded-circle">
             <h5 style="margin-top: 40px;">Sound Engineer</h5>
         </div>
 
@@ -109,14 +109,13 @@
                 <div class="col-md-9">
                     <h3>Background</h3>
                     <div>
-                        <h4>GNM Grammu</h4>
+                        <h4>Game Creater with python</h4>
                         <p>3 year</p>
-                        <p>Music Producer</p>
                     </div>
                     <div style="margin-top: 80px;">
-                        <h4>What the cuck!</h4>
+                        <h4>Sound for game</h4>
                         <p>2 year</p>
-                        <p>Recording Engineer</p>
+                        <p>Music Composer</p>
                     </div>
                     <div style="margin-top: 80px;">
                         <h4>Big room</h4>
@@ -124,7 +123,7 @@
                         <p>Music Composer</p>
                     </div>
                     <div style="margin-top: 80px;">
-                        <h4>White song</h4>
+                        <h4>Write song</h4>
                         <p>2 year</p>
                         <p>Music Composer</p>
                     </div>
@@ -137,6 +136,8 @@
                         - Music Composition<br>
                         - Performing<br>
                         - Recording<br>
+                        - RPG Game Creater<br>
+                        - Sound for game<br>
 
                     </div>
                 </div>
@@ -150,10 +151,10 @@
             <p>Contact me!</p>
             
             <div>
-                Email: <a href="mailto:661600XX@kmitl.ac.th" style="color: rgb(255, 199, 44);">661600XX@kmitl.ac.th</a><br>
-                Phone: <a href="tel:0999999999" style="color: rgb(255, 199, 44);">099-999-9999</a><br>
-                Instagram: <a href="https://www.instagram.com/pool_pcr/"  style="color: rgb(255, 199, 44);">Instagram</a><br>
-                GitHub: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"  style="color: rgb(255, 199, 44);">GitHub</a><br>
+                Email: <a href="Email:66160007@kmitl.ac.th" style="color: rgb(132, 0, 255);">661600XX@kmitl.ac.th</a><br>
+                Phone: <a href="tel:0999999999" style="color: rgb(132, 0, 255);">099-999-9999</a><br>
+                Instagram: <a href="https://www.instagram.com/fujimiya_katsuki_sekai/"  style="color: rgb(132, 0, 255);">Instagram</a><br>
+                GitHub: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"  style="color: rgb(132, 0, 255);">GitHub</a><br>
             </div>
         </section>
     </div>
